# forecaster-v2

./: .gitignore  .gitmodules  Readme.md  context.json  pyproject.toml
data_preprocessing/: backtest_helpers.py  base_features.py  context.json  context.py  fetch_data.py  helpers.py  patterns.py  strategies.py  technical_features.py  training_helpers.py  volatility.py
experimentations/: ada.ipynb  doge.ipynb  eth.ipynb  param-optimization.ipynb  sol.ipynb  tao.ipynb  trx.ipynb  xrp.ipynb
live_run/oms/: oms.py  oms_test.py
