[project]
name = "forcaster-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "binance>=0.3.52",
    "catboost>=1.2.8",
    "ccxt>=4.4.92",
    "dill>=0.4.0",
    "imbalanced-learn>=0.12.4",
    "imblearn>=0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "optuna>=4.4.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "pycryptodome>=3.23.0",
    "pytest>=8.4.1",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.1",
    "pywavelets>=1.8.0",
    "scikeras[tensorflow]>=0.13.0",
    "scikit-learn>=1.7.0",
    "scikit-learn-intelex>=2025.6.1",
    "scipy>=1.16.0",
    "statsmodels>=0.14.4",
    "ta-lib>=0.6.4",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tensorflow>=2.19.0",
    "vectorbt>=0.27.1",
    "xgboost>=3.0.2",
]
